# mosaic_decomposer

./: CMakeLists.txt  README.md  conanfile.py
cmake/: CompilerWarnings.cmake  Conan.cmake
scripts/: main.py
src/: CMakeLists.txt  commondefinitions.h  configparams.h  frame.cpp  frame.h  frameproviderinterface.h  imageframeprovideropencv.cpp  imageframeprovideropencv.h  main.cpp  mosaicdecomposer.cpp  mosaicdecomposer.h  pixel.cpp  pixel.h  videoframeprovideropencv.cpp  videoframeprovideropencv.h
test/: CMakeLists.txt  tests.cpp
